--- a/styles.css
+++ b/styles.css
@@ -72,19 +72,36 @@ nav {
   border-radius: 5px;
 }
 
-.imagem-produto {
-  background-color: #ccc;
-  width: 150px;
-  height: 150px;
+.imagem-produto img {
+  width: 100%;
+  height: auto;
+  display: block;
   margin: 0 auto 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .preco {
   color: green;
   font-weight: bold;
+}
+
+/* Modais */
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
 }
 
 /* Rodapé */
